--- a/index.html
+++ b/index.html
@@ -1,18 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="icon" href="https://EstiBlancoelorrieta.github.io/favicon.png"  type="image/gif">
+  <link rel="icon" href="https://xufengduan.github.io/favicon.png"  type="image/gif">
     <title>Xufeng Duan</title>
-
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-4S9SLZY2J6"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-4S9SLZY2J6');
-</script>	
 	
     
 </head>
@@ -30,11 +20,11 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 
 <!-- Sidebar/menu -->
 <nav class="w3-sidebar w3-bar-block w3-white w3-animate-left w3-text-grey w3-collapse w3-top w3-center" style="z-index:3;width:300px;font-weight:bold" id="mySidebar"><br>
-  <h3 class="w3-padding-64 w3-center"><b>Esti<br>Blanco-Elorrieta</b></h3>
+  <h3 class="w3-padding-64 w3-center"><b>Xufeng Duan</b></h3>
   <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-hide-large">CLOSE</a>
   <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button">ABOUT ME</a> 
   <a href="#publications" onclick="w3_close()" class="w3-bar-item w3-button">PUBLICATIONS</a>
-  <a href="https://EstiBlancoElorrieta.github.io/CV_EBE.pdf" onclick="w3_close()" class="w3-bar-item w3-button">CV</a>
+  <a href="" onclick="w3_close()" class="w3-bar-item w3-button">CV</a>
   <a href="#presentations" onclick="w3_close()" class="w3-bar-item w3-button">INVITED TALKS</a>
   <a href="#presentations2" onclick="w3_close()" class="w3-bar-item w3-button">CONFERENCE TALKS</a>
     <a href="#posters" onclick="w3_close()" class="w3-bar-item w3-button">POSTER PRESENTATIONS</a>
@@ -75,7 +65,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <!-- About section -->
   <div class="w3-container w3-dark-grey w3-center w3-text-light-grey w3-padding-32" id="about">
     <h4><b>About Me</b></h4>
-    <img src="https://EstiBlancoelorrieta.github.io/headshot.jpg" alt="Me" class="w3-image w3-padding-32" width="400" height="450">
+    <img src="" alt="Me" class="w3-image w3-padding-32" width="400" height="450">
     <div class="w3-content w3-justify" style="max-width:600px">
 	    
       <h4>Xufeng Duan</h4>
