--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="icon" href="https://xufengduan.github.io/favicon.png"  type="image/gif">
+  <link rel="icon" href="https://xufengduan.github.io/avicon.png"  type="image/gif">
     <title>Xufeng Duan</title>
 </head>
 <title>W3.CSS Template</title>
@@ -63,7 +63,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <!-- About section -->
   <div class="w3-container w3-dark-grey w3-center w3-text-light-grey w3-padding-32" id="about">
     <h4><b>About Me</b></h4>
-    <img src="https://xufengduan/headshot.jpg" alt="Me" class="w3-image w3-padding-32" width="400" height="450">
+    <img src="https://xufengduan.github.io/headshot.jpg" alt="Me" class="w3-image w3-padding-32" width="400" height="450">
     <div class="w3-content w3-justify" style="max-width:600px">
 	    
       <h4>Xufeng Duan</h4>
