--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   </div>
 
   <!-- About section -->
-  <div class="w3-container w3-dark-grey w3-center w3-text-light-grey w3-padding-32" id="about">
+  <div class="w3-container w3-dark-grey w3-center w3-light-blue w3-padding-32" id="about">
     <h4><b>About Me</b></h4>
     <img src="https://xufengduan.github.io/headshot.jpg" alt="Me" class="w3-image w3-padding-32" width="400" height="450">
     <div class="w3-content w3-justify" style="max-width:600px">
