--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <a href="#posters" onclick="w3_close()" class="w3-bar-item w3-button">POSTER PRESENTATIONS</a>
 <a href="#funding" onclick="w3_close()" class="w3-bar-item w3-button">FUNDING AND AWARDS</a>
 <a href="#outreach" onclick="w3_close()" class="w3-bar-item w3-button">SCIENTIFIC OUTREACH</a>
-<a href="#advocacy" onclick="w3_close()" class="w3-bar-item w3-button">(TRANS)GENDER ADVOCACY</a>
 <a href="#media" onclick="w3_close()" class="w3-bar-item w3-button">MEDIA</a>
 <a href="#code" onclick="w3_close()" class="w3-bar-item w3-button">CODE</a>
 
@@ -134,7 +133,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   </div>
 </div>    
 
-  <div class="w3-black w3-center w3-padding-24">Last updated 04/01/2023</div>
+  <div class="w3-light-grey w3-center w3-padding-24">Last updated 09/01/2023</div>
 
 <script>
 // Script to open and close sidebar
