--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
  <!-- Invited talks section -->
   <div class="w3-container w3-light-grey w3-padding-32 w3-padding-large" id="presentations">
     <div class="w3-content" style="max-width:600px">
-      <h4 class="w3-center"><b>Invited talks</b></h4>
+      <h4><b>Invited talks</b></h4>
     
     </div>
   </div>
@@ -99,7 +99,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <!-- Posters section -->
   <div class="w3-container w3-light-grey w3-padding-32 w3-padding-large" id="posters">
     <div class="w3-content" style="max-width:600px">
-      <h4 class="w3-center"><b>Poster presentations</b></h4>
+      <h4><b>Poster presentations</b></h4>
   
     </div>
   </div>        
@@ -107,33 +107,33 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 <!-- Funding section -->
   <div class="w3-container w3-light-grey w3-padding-32 w3-padding-large" id="funding">
     <div class="w3-content" style="max-width:600px">
-      <h4 class="w3-center"><b>Awards and Scholarships</b></h4>
+      <h4><b>Awards and Scholarships</b></h4>
     </div>
   </div>    
 
 <!-- Scientific Outreach section -->
   <div class="w3-container w3-light-grey w3-padding-32 w3-padding-large" id="outreach">
     <div class="w3-content" style="max-width:600px">
-      <h4 class="w3-center"><b>Scientific Outreach</b></h4>
+      <h4><b>Scientific Outreach</b></h4>
     </div>
   </div>    
 
 	    
 <div class="w3-container w3-light-grey w3-padding-32 w3-padding-large" id="Media">
 <div class="w3-content" style="max-width:600px">
-<h4 class="w3-center"><b>Media</b></h4>
+<h4><b>Media</b></h4>
 </div>
 </div>   
   
 <!-- Code section -->
 <div class="w3-container w3-light-grey w3-padding-32 w3-padding-large" id="code">
   <div class="w3-content" style="max-width:600px">
-      <h4 class="w3-center"><b>Code</b></h4>
+      <h4><b>Code</b></h4>
  
   </div>
 </div>    
 
-  <div class="w3-light-grey w3-center w3-padding-24">Last updated 09/01/2023</div>
+  <div>Last updated 09/01/2023</div>
 
 <script>
 // Script to open and close sidebar
