--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
  <!-- Publication section -->
   <div class="w3-container w3-light-grey w3-padding-32 w3-padding-large" id="publications">
     <div class="w3-content" style="max-width:600px">
-      <h4 class="w3-center"><b>Publications</b></h4>
+      <h4><b>Publications</b></h4>
     </div>
   </div>    
   
