--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 	<a href="" onclick="w3_close()" class="w3-bar-item w3-button">CV</a>
 	<a href="#presentations" onclick="w3_close()" class="w3-bar-item w3-button">CONFERENCE TALKS</a>
 	<a href="#posters" onclick="w3_close()" class="w3-bar-item w3-button">POSTER PRESENTATIONS</a>
-	<a href="#projects" onclick="w3_close()" class="w3-bar-item w3-button">RESEARCH PROJECT</a>
+	<a href="#projects" onclick="w3_close()" class="w3-bar-item w3-button">RESEARCH PROJECTs</a>
 	<a href="#scholarships" onclick="w3_close()" class="w3-bar-item w3-button">FUNDING AND AWARDS</a>
 	<a href="#training" onclick="w3_close()" class="w3-bar-item w3-button">TRAINING</a>
 	<a href="#funding" onclick="w3_close()" class="w3-bar-item w3-button">FUNDING</a>
@@ -64,7 +64,6 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 	    
       <h4>Xufeng Duan</h4>
 	    I am a PhD Student in the <a href="https://cuhklpl.github.io/">language processing lab</a>, Linguistic department, Chinese University of Hong Kong (top 50 university in QS ranking). I am looking for a postdoc position in 2024. 
-	    <br></br>
 	    <br></br>
 	    My research foucus on large language model(LLM) and orthographic processing in both handwriting and reading. I used behavior/EEG/fMRI evidence to study the mechanism of language system: 
 	    the orthgoraphic processing in Chinese (an opeque language with unreliable phonology to orthography conversion, which offers an opportunity to disintangle the orthography from phonology); language prediction in human and LLM.
@@ -118,11 +117,11 @@ Limited Scope: Chinese for Specific, Academic, & Professional Purposes</i> Hawai
   <div class="w3-container w3-light-grey w3-padding-32 w3-padding-large" id="projects">
     <div class="w3-content" style="max-width:600px">
       <h4><b>Research Projects</b></h4>
-	    <h3> Orthographic Processing in Chinese Handwriting</h3>
+	    <h5> Orthographic Processing in Chinese Handwriting</h3>
 	    Timecourse of Chinese handwriting: EEG study<br></br>
 	    Character amneisa: Behavior/EEG/fMRI study<br></br><br></br>
 
-	    <h3> Large language models for language research</h3>
+	    <h5> Large language models for language research</h3>
 	    Prediction in LLM and humany<br></br>
 	    LLM translation y<br></br>
 
