--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ Limited Scope: Chinese for Specific, Academic, & Professional Purposes</i> Hawai
       <h4><b>Research Projects</b></h4>
 	    <h5> Orthographic Processing in Chinese Handwriting</h3>
 	    Timecourse of Chinese handwriting: EEG study<br></br>
-	    Character amneisa: Behavior/EEG/fMRI study<br></br><br></br>
+	    Character amneisa: Behavior/EEG/fMRI study<br></br>
 
 	    <h5> Large language models for language research</h3>
 	    Prediction in LLM and humany<br></br>
