--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@ Limited Scope: Chinese for Specific, Academic, & Professional Purposes</i> Hawai
 	    Character amneisa: Behavior/EEG/fMRI study<br></br>
 
 	    <h5> Large language models for language research</h3>
-	    Prediction in LLM and humany<br></br>
-	    LLM translation y<br></br>
+	    Prediction in LLM and human<br></br>
+	    LLM translation<br></br>
 
     </div>
   </div>    
