--- a/index.html
+++ b/index.html
@@ -115,12 +115,12 @@ Limited Scope: Chinese for Specific, Academic, & Professional Purposes</i> Hawai
     <div class="w3-content" style="max-width:600px">
       <h4><b>Research Projects</b></h4>
 	    <h5> Orthographic Processing in Chinese Handwriting</h3>
-	    Timecourse of Chinese handwriting: EEG study<br></br>
-	    Character amneisa: Behavior/EEG/fMRI study<br></br>
+	    - Timecourse of Chinese handwriting: EEG study<br></br>
+	    - Character amneisa: Behavior/EEG/fMRI study<br></br>
 
 	    <h5> Large language models for language research</h3>
-	    Prediction in LLM and human<br></br>
-	    LLM translation<br></br>
+	    - Prediction in LLM and human<br></br>
+	    - LLM translation<br></br>
 
     </div>
   </div>    
