--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <div class="w3-container w3-light-grey w3-padding-32 w3-padding-large" id="publications">
     <div class="w3-content" style="max-width:600px">
       <h4><b>Publications</b></h4>
-	    <br>1. Shuo Lu, <b>Xufeng Duan </b> & Xiangyu Li(2021). Prominence and Locality Principle in Chinese Possessive Topicalization Sentences and its Psychological Basis——Evidence from eye-movements. <i> Contemporary Linguistics</i> 23(1): 56-73</i> <a href=>[pdf]</a>
+	    <br>1. Shuo Lu, <b>Xufeng Duan </b> & Xiangyu Li(2021). Prominence and Locality Principle in Chinese Possessive Topicalization Sentences and its Psychological Basis——Evidence from eye-movements. <i> Contemporary Linguistics</i> 23(1): 56-73</i> <a href=>[pdf]</a><br><br>
+	    2.Cai, Z. G., Haslett, D. A., <b>Duan, X.</b>, Wang, S., & Pickering, M. J. (2023). Does ChatGPT resemble humans in language use?. arXiv preprint arXiv:2303.08014.<br><br>
 <br>
     </div>
   </div>    
@@ -89,10 +90,10 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
  <!-- CONFERENCE TALKS section -->
   <div class="w3-container w3-light-grey w3-padding-32 w3-padding-large" id="presentations">
     <div class="w3-content" style="max-width:600px">
-      <h4><b>Conference Talks</b></h4>
+      <h4><b>Conference Talks/Papers</b></h4>
 	     Zhenguang Cai, <b>Xufeng Duan</b>, David Haslett, Shuqi Wang & Martin Pickering (2023). Does ChatGPT resemble humans in language use? <i>Architectures and Mechanisms for Language Processing (AMLaP)</i>. Donostia-San Sebastián, Spain.<br><br>
-	    <b>Xufeng Duan</b>(2018). Language rehabilitation training therapies for Chinese aphasia— Using Chinese characters as clues. <i>Beyond A
-Limited Scope: Chinese for Specific, Academic, & Professional Purposes</i> Hawaii, US.<br><br>
+	     Zhuang Qiu, <b>Xufeng Duan</b>, and Zhenguang Cai. 2023. Does ChatGPT Resemble Humans in Processing Implicatures?. In <i>Proceedings of the 4th Natural Logic Meets Machine Learning Workshop</i>, pages 25–34, Nancy, France. Association for Computational Linguistics.<br><br>
+	    <b>Xufeng Duan</b>(2018). Language rehabilitation training therapies for Chinese aphasia— Using Chinese characters as clues. <i>Beyond A Limited Scope: Chinese for Specific, Academic, & Professional Purposes</i> Hawaii, US.<br><br>
 	    <b>Xufeng Duan</b>(2018). The Dependence on different symbolic systems during word recognition-pronunciation tests by Chinese native speakers with aphasia——based on eye-movement methodology. <i>Annual Conference of the Chinese Society of Neurological Linguistics</i>. Xuzhou, China.<br><br>
 	    <b>Xufeng Duan</b>(2018). The Rules of Prominency and Locality Psychological Reality Basis. <i>Annual Academic Conference of the Chinese Linguistic Society</i>. Guangzhou, China.<br><br>
     
