--- a/index.html
+++ b/index.html
@@ -79,8 +79,9 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <div class="w3-container w3-light-grey w3-padding-32 w3-padding-large" id="publications">
     <div class="w3-content" style="max-width:600px">
       <h4><b>Publications</b></h4>
-	    <br>1. Shuo Lu, <b>Xufeng Duan </b> & Xiangyu Li(2021). Prominence and Locality Principle in Chinese Possessive Topicalization Sentences and its Psychological Basis——Evidence from eye-movements. <i> Contemporary Linguistics</i> 23(1): 56-73</i> <a href=>[pdf]</a><br><br>
-	    2.Cai, Z. G., Haslett, D. A., <b>Duan, X.</b>, Wang, S., & Pickering, M. J. (2023). Does ChatGPT resemble humans in language use?. arXiv preprint arXiv:2303.08014.<br><br>
+	    <br> Cai, Z. G., Haslett, D. A., <b>Duan, X.</b>, Wang, S., & Pickering, M. J. (2023). Does ChatGPT resemble humans in language use?. arXiv preprint arXiv:2303.08014.<br><br>
+	    Shuo Lu, <b>Xufeng Duan </b> & Xiangyu Li(2021). Prominence and Locality Principle in Chinese Possessive Topicalization Sentences and its Psychological Basis——Evidence from eye-movements. <i> Contemporary Linguistics</i> 23(1): 56-73</i> <a href=>[pdf]</a><br><br>
+	    
 <br>
     </div>
   </div>    
@@ -130,6 +131,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <div class="w3-container w3-light-grey w3-padding-32 w3-padding-large" id="scholarships">
     <div class="w3-content" style="max-width:600px">
       <h4><b>Awards and Scholarships</b></h4>
+	    The Chinese university of Hong Kong Ph.D. Studentship <b>around 880,000 HKD</b>
     </div>
   </div>    
 
@@ -145,8 +147,9 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 <!-- Training section -->
 <div class="w3-container w3-light-grey w3-padding-32 w3-padding-large" id="training">
   <div class="w3-content" style="max-width:600px">
-      <h4><b>Training</b></h4>
-	  
+      <h4><b>Training/Intership</b></h4>
+	  <i>TMS training</i> APAC TMS clinic Workshop, University of Numnich & MagMore Company May.2023 <br><br>
+	  <i>Language therapist</i> The Third Affiliated Hospital of Sun Yat-sen University Jul.2017-Jul.2019 <br><br>
   </div>
 </div>    
 
