--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 	    My research foucus on large language model(LLM) and orthographic processing in Chinese handwriting. I used behavior/EEG/fMRI evidence and computational method to study the mechanism of language system. I was also trained and licensed to use TMS for research in Hong Kong and had an intern as language therapist/researcher for aphasia in the Third Affiliated Hospital of Sun Yat-sen University.
 	    <br></br>
 	    <br></br>
-	    
-      mail: xufeng.duan@link.cuhk.edu.hk<br>
+	    Mail: xufeng.duan@link.cuhk.edu.hk<br></br>
+	    <a href="https://cuhklpl.github.io/">Google scholar</a><br></br>
       <hr class="w3-opacity">
  
     </div>
