--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 	    <br></br>
 	    <br></br>
 	    Mail: xufeng.duan@link.cuhk.edu.hk<br></br>
-	    <a href="https://cuhklpl.github.io/">Google scholar</a><br></br>
+	    <a href="https://scholar.google.com/citations?user=W-MI5XUAAAAJ">Google scholar</a><br></br>
       <hr class="w3-opacity">
  
     </div>
