--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <div class="w3-container w3-light-grey w3-padding-32 w3-padding-large" id="posters">
     <div class="w3-content" style="max-width:600px">
       <h4><b>Poster Presentations</b></h4>
+	    Zhuang Qiu, <b>Xufeng Duan</b> & Zhenguang Cai (2024). Do Large Language Models Resemble Humans in Grammaticality Judgement? <i> Human sentence processing 2024 </i>. University of Michigan, USA. <br><br>
 	    <b>Xufeng Duan</b>, Zhenguang Cai & Bo Yao. (2023). Electrophysiological responses associated with character amnesia in Chinese handwriting. <i> Architectures and Mechanisms for Language Processing (AMLaP)</i>. Donostia-San Sebastián, Spain.<br><br>
 	    Hanlin Wu, <b>Xufeng Duan</b> & Zhenguang Cai. (2023). Belief of Speakers’ Linguistic Competence Modulates the N400 Effect Elicited by Inconsistent Lexical Use. <i> Architectures and Mechanisms for Language Processing (AMLaP)</i>. Donostia-San Sebastián, Spain.<br><br>
 	    Zhuang Qiu, <b>Xufeng Duan</b>, Zhenguang Cai & Nan Zhao. (2023). Pragmatic Implicature Processing in ChatGPT. <i> Architectures and Mechanisms for Language Processing (AMLaP)</i>. Donostia-San Sebastián, Spain.<br><br>
