--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       <h4>Xufeng Duan</h4>
 	    I am a PhD candidate in the <a href="https://cuhklpl.github.io/">language processing lab</a>, Linguistic department, Chinese University of Hong Kong (top 50 university in QS ranking). I am looking for a postdoc position in 2024. 
 	    <br></br>
-	    My research foucus on large language model(LLM) and orthographic processing in Chinese handwriting. I used behavior/EEG/fMRI evidence and computational method to study the mechanism of language system. I was also trained and licensed to use TMS for research in Hong Kong and had an intern as language therapist/researcher for aphasia in the Third Affiliated Hospital of Sun Yat-sen University.
+	    My research foucus on large language model (LLM) and orthographic processing in Chinese handwriting. I used behavior/EEG/fMRI evidence and computational method to study the mechanism of language system. I was also trained and licensed to use TMS for research in Hong Kong and had an intern as language therapist/researcher for aphasia in the Third Affiliated Hospital of Sun Yat-sen University.
 	    <br></br>
 	    <br></br>
 	    Mail: xufeng.duan@link.cuhk.edu.hk<br></br>
@@ -79,9 +79,10 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <div class="w3-container w3-light-grey w3-padding-32 w3-padding-large" id="publications">
     <div class="w3-content" style="max-width:600px">
       <h4><b>Publications</b></h4>
-	    <b>DUAN, X.</b>, Li, S., & Cai, Z. G. (2023). MacBehaviour: An R package for behavioural experimentation on large language models. preprint osf.io/preprints/psyarxiv/ywtfd<br><br>
-	    Cai, Z. G., Haslett, D. A., <b>Duan, X.</b>, Wang, S., & Pickering, M. J. (2023). Does ChatGPT resemble humans in language use?. arXiv preprint arXiv:2303.08014.<br><br>
-	    Shuo Lu, <b>Xufeng Duan </b> & Xiangyu Li(2021). Prominence and Locality Principle in Chinese Possessive Topicalization Sentences and its Psychological Basis——Evidence from eye-movements. <i> Contemporary Linguistics</i> 23(1): 56-73</i> <a href=>[pdf]</a><br><br>
+	    Wu, H., <b>Duan, X.</b>b>, & Cai, Z. G. (in press). Speaker demographics modulate listeners' neural correlates of spoken word processing. Journal of Cognitive Neuroscience.<br><br>
+	    <b>DUAN, X.</b>, Li, S., & Cai, Z. G. (2024). MacBehaviour: An R package for behavioural experimentation on large language models. <a href="https://arxiv.org/abs/2405.07495">preprint</a><br><br>
+	    Cai, Z. G., Haslett, D. A., <b>Duan, X.</b>, Wang, S., & Pickering, M. J. (2023). Does ChatGPT resemble humans in language use?. <a href="https://arxiv.org/abs/2303.08014">preprint</a><br><br>
+	    Shuo Lu, <b>Xufeng Duan </b> & Xiangyu Li(2021). Prominence and Locality Principle in Chinese Possessive Topicalization Sentences and its Psychological Basis——Evidence from eye-movements. <i> Contemporary Linguistics</i> 23(1): 56-73</i> <a href=https://www.dropbox.com/scl/fi/4ga7a5ssslaed72hx3i2v/Prominence-and-Locality-Principle-in-Chinese-Possessive-Topicalization-Sentences.pdf?rlkey=7rtvpqolr2xs6rtlychdtatwb&st=672mpgkb&dl=0>[pdf]</a><br><br>
 	    
 <br>
     </div>
