--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <div class="w3-container w3-light-grey w3-padding-32 w3-padding-large" id="publications">
     <div class="w3-content" style="max-width:600px">
       <h4><b>Publications</b></h4>
-	    Wu, H., <b>Duan, X.</b>b>, & Cai, Z. G. (in press). Speaker demographics modulate listeners' neural correlates of spoken word processing. Journal of Cognitive Neuroscience.<br><br>
+	    Wu, H., <b>Duan, X.</b>, & Cai, Z. G. (in press). Speaker demographics modulate listeners' neural correlates of spoken word processing. Journal of Cognitive Neuroscience.<br><br>
 	    <b>DUAN, X.</b>, Li, S., & Cai, Z. G. (2024). MacBehaviour: An R package for behavioural experimentation on large language models. <a href="https://arxiv.org/abs/2405.07495">preprint</a><br><br>
 	    Cai, Z. G., Haslett, D. A., <b>Duan, X.</b>, Wang, S., & Pickering, M. J. (2023). Does ChatGPT resemble humans in language use?. <a href="https://arxiv.org/abs/2303.08014">preprint</a><br><br>
 	    Shuo Lu, <b>Xufeng Duan </b> & Xiangyu Li(2021). Prominence and Locality Principle in Chinese Possessive Topicalization Sentences and its Psychological Basis——Evidence from eye-movements. <i> Contemporary Linguistics</i> 23(1): 56-73</i> <a href=https://www.dropbox.com/scl/fi/4ga7a5ssslaed72hx3i2v/Prominence-and-Locality-Principle-in-Chinese-Possessive-Topicalization-Sentences.pdf?rlkey=7rtvpqolr2xs6rtlychdtatwb&st=672mpgkb&dl=0>[pdf]</a><br><br>
