--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <div class="w3-container w3-light-grey w3-padding-32 w3-padding-large" id="publications">
     <div class="w3-content" style="max-width:600px">
       <h4><b>Publications</b></h4>
-	    Wu, H., <b>Duan, X.</b>, & Cai, Z. G. (in press). Speaker demographics modulate listeners' neural correlates of spoken word processing. Journal of Cognitive Neuroscience.<br><br>
+	    <b>Duan, X.</b>, & Cai, Z. G. (in press). Chinese Character Processing. <i>Oxford Research Encyclopedia of Linguistics</i>. Oxford University Press. doi: https://doi.org/10.1093/acrefore/9780199384655.013.1012.<br><br>
+	    Wu, H., <b>Duan, X.</b>, & Cai, Z. G. (in press). Speaker demographics modulate listeners' neural correlates of spoken word processing. <i>Journal of Cognitive Neuroscience</i>.<br><br>
 	    <b>DUAN, X.</b>, Li, S., & Cai, Z. G. (2024). MacBehaviour: An R package for behavioural experimentation on large language models. <a href="https://arxiv.org/abs/2405.07495">preprint</a><br><br>
 	    Cai, Z. G., Haslett, D. A., <b>Duan, X.</b>, Wang, S., & Pickering, M. J. (2023). Does ChatGPT resemble humans in language use?. <a href="https://arxiv.org/abs/2303.08014">preprint</a><br><br>
 	    Shuo Lu, <b>Xufeng Duan </b> & Xiangyu Li(2021). Prominence and Locality Principle in Chinese Possessive Topicalization Sentences and its Psychological Basis——Evidence from eye-movements. <i> Contemporary Linguistics</i> 23(1): 56-73</i> <a href=https://www.dropbox.com/scl/fi/4ga7a5ssslaed72hx3i2v/Prominence-and-Locality-Principle-in-Chinese-Possessive-Topicalization-Sentences.pdf?rlkey=7rtvpqolr2xs6rtlychdtatwb&st=672mpgkb&dl=0>[pdf]</a><br><br>
@@ -94,10 +95,12 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <div class="w3-container w3-light-grey w3-padding-32 w3-padding-large" id="presentations">
     <div class="w3-content" style="max-width:600px">
       <h4><b>Conference Talks/Papers</b></h4>
-	    <b>Xufeng Duan</b>, Chinese translations of English words: A comparison between human and ChatGPT translations (2023). <i>Architectures and Mechanisms for Language Processing Asia (AMLaP Asia)</i>. Hong Kong, China.<br><br>
+	    
+	    <b>Xufeng Duan</b> The Neural Basis of Decline in Written Production: Evidence from Chinese Handwriting (2024). <i>The annual meeting of Society for the Neurobiology of Language (SNL) </i>. Brisbane, Australia.<br><br>
+	    <b>Xufeng Duan</b> Chinese translations of English words: A comparison between human and ChatGPT translations (2023). <i>Architectures and Mechanisms for Language Processing Asia (AMLaP Asia)</i>. Hong Kong, China.<br><br>
 	     Zhenguang Cai, <b>Xufeng Duan</b>, Lu Sun and Martin PickeringStructural priming in ChatGPT (2023). <i>Architectures and Mechanisms for Language Processing Asia (AMLaP Asia)</i>. Hong Kong, China.<br><br>
-	     Zhenguang Cai, <b>Xufeng Duan</b>, David Haslett, Shuqi Wang & Martin Pickering (2023). Does ChatGPT resemble humans in language use? <i>Architectures and Mechanisms for Language Processing (AMLaP)</i>. Donostia-San Sebastián, Spain.<br><br>
-	     Zhuang Qiu, <b>Xufeng Duan</b>, and Zhenguang Cai(2023). Does ChatGPT Resemble Humans in Processing Implicatures? In <i>Proceedings of the 4th Natural Logic Meets Machine Learning Workshop</i>, pages 25–34, Nancy, France. Association for Computational Linguistics.<br><br>
+	     Zhenguang Cai, <b>Xufeng Duan</b>, David Haslett, Shuqi Wang & Martin Pickering. Do language models resemble humans in language use (2023)? <i>Architectures and Mechanisms for Language Processing (AMLaP)</i>. Donostia-San Sebastián, Spain.<br><br>
+	     Zhuang Qiu, <b>Xufeng Duan</b>, and Zhenguang Cai. Does ChatGPT Resemble Humans in Processing Implicatures (2023)? <i>Proceedings of the 4th Natural Logic Meets Machine Learning Workshop</i>, pages 25–34, Nancy, France. Association for Computational Linguistics.<br><br>
 	    <b>Xufeng Duan</b>(2018). Language rehabilitation training therapies for Chinese aphasia— Using Chinese characters as clues. <i>Beyond A Limited Scope: Chinese for Specific, Academic, & Professional Purposes</i> Hawaii, US.<br><br>
 	    <b>Xufeng Duan</b>(2018). The Dependence on different symbolic systems during word recognition-pronunciation tests by Chinese native speakers with aphasia——based on eye-movement methodology. <i>Annual Conference of the Chinese Society of Neurological Linguistics</i>. Xuzhou, China.<br><br>
 	    <b>Xufeng Duan</b>(2018). The Rules of Prominency and Locality Psychological Reality Basis. <i>Annual Academic Conference of the Chinese Linguistic Society</i>. Guangzhou, China.<br><br>
@@ -110,7 +113,8 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <div class="w3-container w3-light-grey w3-padding-32 w3-padding-large" id="posters">
     <div class="w3-content" style="max-width:600px">
       <h4><b>Poster Presentations</b></h4>
-	    Zhuang Qiu, <b>Xufeng Duan</b> & Zhenguang Cai (2024). Do Large Language Models Resemble Humans in Grammaticality Judgement? <i> Human sentence processing 2024 </i>. University of Michigan, USA. <br><br>
+	    Yichi Zhang, <b>Xufeng Duan</b> & Zhenguang Cai. (2024). The causal role of left inferior frontal gyri in Chinese character handwriting: A transcranial magnetic stimulation study. <i>The annual meeting of Society for the Neurobiology of Language (SNL) </i>. Brisbane, Australia.<br><br>
+	    Zhuang Qiu, <b>Xufeng Duan</b> & Zhenguang Cai. (2024). Do Large Language Models Resemble Humans in Grammaticality Judgement? <i> Human sentence processing 2024 </i>. University of Michigan, USA. <br><br>
 	    <b>Xufeng Duan</b>, Zhenguang Cai & Bo Yao. (2023). Electrophysiological responses associated with character amnesia in Chinese handwriting. <i> Architectures and Mechanisms for Language Processing (AMLaP)</i>. Donostia-San Sebastián, Spain.<br><br>
 	    Hanlin Wu, <b>Xufeng Duan</b> & Zhenguang Cai. (2023). Belief of Speakers’ Linguistic Competence Modulates the N400 Effect Elicited by Inconsistent Lexical Use. <i> Architectures and Mechanisms for Language Processing (AMLaP)</i>. Donostia-San Sebastián, Spain.<br><br>
 	    Zhuang Qiu, <b>Xufeng Duan</b>, Zhenguang Cai & Nan Zhao. (2023). Pragmatic Implicature Processing in ChatGPT. <i> Architectures and Mechanisms for Language Processing (AMLaP)</i>. Donostia-San Sebastián, Spain.<br><br>
