--- a/index.html
+++ b/index.html
@@ -125,14 +125,14 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <div class="w3-container w3-light-grey w3-padding-32 w3-padding-large" id="projects">
     <div class="w3-content" style="max-width:600px">
       <h4><b>Research Projects</b></h4>
-	    <h5> Orthographic Processing in Chinese Handwriting</h3>
-	    - Timecourse of Chinese handwriting: EEG study<br></br>
-	    - Character amneisa: Behavior/EEG/fMRI study<br></br>
-
 	    <h5> Large language models for language research</h3>
-	    - Prediction in LLM and human<br></br>
-	    - LLM translation<br></br>
-
+	    - LLMs and Brain Alignment<br></br>
+	    - Humanlikeness<br></br>
+	    - LLMs' Interpretability <br></br>
+	    
+	    <h5> Orthographic Processing in Chinese Handwriting</h3>
+	    - Character amneisa: Behavior/EEG/fMRI study<br></br>
+	    - Timecourse of Chinese handwriting: EEG study<br></br>
     </div>
   </div>    
     
