--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       <h4>Xufeng Duan</h4>
 	    I am a PhD candidate in the <a href="https://cuhklpl.github.io/">language processing lab</a>, Linguistic department, Chinese University of Hong Kong (top 50 university in QS ranking). I am looking for a postdoc position in 2024. 
 	    <br></br>
-	    My research foucus on large language model (LLM) and orthographic processing in Chinese handwriting. I used behavior/EEG/fMRI evidence and computational method to study the mechanism of language system. I was also trained and licensed to use TMS for research in Hong Kong and had an intern as language therapist/researcher for aphasia in the Third Affiliated Hospital of Sun Yat-sen University.
+	    My research focuses on large language model (LLM) and language production. I used behavior/EEG/fMRI evidence and computational method to study the mechanism of language system. I was also trained and licensed to use TMS for research in Hong Kong and had an intern as language therapist/researcher for aphasia in the Third Affiliated Hospital of Sun Yat-sen University.
 	    <br></br>
 	    <br></br>
 	    Mail: xufeng.duan@link.cuhk.edu.hk<br></br>
