--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <div class="w3-content w3-justify" style="max-width:600px">
 	    
       <h4>Xufeng Duan</h4>
-	    I am a PhD candidate in the <a href="https://cuhklpl.github.io/">language processing lab</a>, Linguistic department, Chinese University of Hong Kong (top 50 university in QS ranking). I am looking for a postdoc position in 2024. 
+	    I am a PhD candidate in the <a href="https://cuhklpl.github.io/">language processing lab</a>, Linguistic department, The Chinese University of Hong Kong (top 50 university in QS ranking). I am looking for a postdoc position in 2024. 
 	    <br></br>
 	    My research focuses on large language models (LLMs) and language production. I used behavior/EEG/fMRI evidence and computational methods to study the mechanism of language system. I was also trained and licensed to use TMS for research in Hong Kong and had an intern as a language therapist/researcher for aphasia at the Third Affiliated Hospital of Sun Yat-sen University.
 	    <br></br>
@@ -79,6 +79,8 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <div class="w3-container w3-light-grey w3-padding-32 w3-padding-large" id="publications">
     <div class="w3-content" style="max-width:600px">
       <h4><b>Publications</b></h4>
+	    <b>Duan, X.</b>, Xiao, B., Tang, X., & Cai, Z. G. (in press). HLB: Benchmarking LLMs' Humanlikeness in Language Use. <i>arXiv:2409.15890 [cs.CL]</i>. <a href="https://doi.org/10.48550/arXiv.2409.15890">doi:10.48550/arXiv.2409.15890</a><br><br>
+	    <b>Duan, X.</b>, Zhou, X., Xiao, B., & Cai, Z. G. (in press). Unveiling Language Competence Neurons: A Psycholinguistic Approach to Model Interpretability. <i>arXiv:2409.15827 [cs.CL]</i>. <a href="https://doi.org/10.48550/arXiv.2409.15827">doi:10.48550/arXiv.2409.15827</a><br><br>
 	    <b>Duan, X.</b>, & Cai, Z. G. (in press). Chinese Character Processing. <i>Oxford Research Encyclopedia of Linguistics</i>. Oxford University Press. doi: https://doi.org/10.1093/acrefore/9780199384655.013.1012.<br><br>
 	    Wu, H., <b>Duan, X.</b>, & Cai, Z. G. (in press). Speaker demographics modulate listeners' neural correlates of spoken word processing. <i>Journal of Cognitive Neuroscience</i>.<br><br>
 	    <b>DUAN, X.</b>, Li, S., & Cai, Z. G. (2024). MacBehaviour: An R package for behavioural experimentation on large language models. <a href="https://arxiv.org/abs/2405.07495">preprint</a><br><br>
