--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
 body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 .w3-third img{margin-bottom: -6px; opacity: 0.8; cursor: pointer}
 .w3-third img:hover{opacity: 1}
+.publication - item {
+       text - indent: - 20px;
+       padding - left: 20px;
+     }
+.publication - item br {
+       display: block;
+       margin - left: 20px;
+     }
 </style>
 <body class="w3-light-grey w3-content" style="max-width:1600px">
 
@@ -76,20 +84,32 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   </div>
   </div>
  <!-- Publication section -->
-  <div class="w3-container w3-light-grey w3-padding-32 w3-padding-large" id="publications">
-    <div class="w3-content" style="max-width:600px">
-      <h4><b>Publications</b></h4>
-	    <b>Duan, X.</b>, Xiao, B., Tang, X., & Cai, Z. G. (in press). HLB: Benchmarking LLMs' Humanlikeness in Language Use. <i>arXiv:2409.15890 [cs.CL]</i>. <a href="https://doi.org/10.48550/arXiv.2409.15890">doi:10.48550/arXiv.2409.15890</a><br><br>
-	    <b>Duan, X.</b>, Zhou, X., Xiao, B., & Cai, Z. G. (in press). Unveiling Language Competence Neurons: A Psycholinguistic Approach to Model Interpretability. <i>arXiv:2409.15827 [cs.CL]</i>. <a href="https://doi.org/10.48550/arXiv.2409.15827">doi:10.48550/arXiv.2409.15827</a><br><br>
-	    <b>Duan, X.</b>, & Cai, Z. G. (in press). Chinese Character Processing. <i>Oxford Research Encyclopedia of Linguistics</i>. Oxford University Press. doi: https://doi.org/10.1093/acrefore/9780199384655.013.1012.<br><br>
-	    Wu, H., <b>Duan, X.</b>, & Cai, Z. G. (in press). Speaker demographics modulate listeners' neural correlates of spoken word processing. <i>Journal of Cognitive Neuroscience</i>.<br><br>
-	    <b>DUAN, X.</b>, Li, S., & Cai, Z. G. (2024). MacBehaviour: An R package for behavioural experimentation on large language models. <a href="https://arxiv.org/abs/2405.07495">preprint</a><br><br>
-	    Cai, Z. G., Haslett, D. A., <b>Duan, X.</b>, Wang, S., & Pickering, M. J. (2023). Does ChatGPT resemble humans in language use?. <a href="https://arxiv.org/abs/2303.08014">preprint</a><br><br>
-	    Shuo Lu, <b>Xufeng Duan </b> & Xiangyu Li(2021). Prominence and Locality Principle in Chinese Possessive Topicalization Sentences and its Psychological Basis——Evidence from eye-movements. <i> Contemporary Linguistics</i> 23(1): 56-73</i> <a href=https://www.dropbox.com/scl/fi/4ga7a5ssslaed72hx3i2v/Prominence-and-Locality-Principle-in-Chinese-Possessive-Topicalization-Sentences.pdf?rlkey=7rtvpqolr2xs6rtlychdtatwb&st=672mpgkb&dl=0>[pdf]</a><br><br>
-	    
-<br>
-    </div>
-  </div>    
+       <div class="w3 - container w3 - light - grey w3 - padding - 32 w3 - padding - large" id="publications">
+       <div class="w3 - content" style="max - width:600px">
+         <h4><b>Publications</b></h4>
+         <div class="publication - item">
+           <b>Duan, X.</b>, Xiao, B., Tang, X., & Cai, Z. G. (in press). HLB: Benchmarking LLMs' Humanlikeness in Language Use. <i>arXiv:2409.15890 [cs.CL]</i>. <a href="https://doi.org/10.48550/arXiv.2409.15890">doi:10.48550/arXiv.2409.15890</a><br><br>
+         </div>
+         <div class="publication - item">
+           <b>Duan, X.</b>, Zhou, X., Xiao, B., & Cai, Z. G. (in press). Unveiling Language Competence Neurons: A Psycholinguistic Approach to Model Interpretability. <i>arXiv:2409.15827 [cs.CL]</i>. <a href="https://doi.org/10.48550/arXiv.2409.15827">doi:10.48550/arXiv.2409.15827</a><br><br>
+         </div>
+         <div class="publication - item">
+           <b>Duan, X.</b>, & Cai, Z. G. (in press). Chinese Character Processing. <i>Oxford Research Encyclopedia of Linguistics</i>. Oxford University Press. doi: https://doi.org/10.1093/acrefore/9780199384655.013.1012.<br><br>
+         </div>
+         <div class="publication - item">
+           Wu, H., <b>Duan, X.</b>, & Cai, Z. G. (in press). Speaker demographics modulate listeners' neural correlates of spoken word processing. <i>Journal of Cognitive Neuroscience</i>.<br><br>
+         </div>
+         <div class="publication - item">
+           <b>DUAN, X.</b>, Li, S., & Cai, Z. G. (2024). MacBehaviour: An R package for behavioural experimentation on large language models. <a href="https://arxiv.org/pdf/2405.07495">preprint</a><br><br>
+         </div>
+         <div class="publication - item">
+           Cai, Z. G., Haslett, D. A., <b>Duan, X.</b>, Wang, S., & Pickering, M. J. (2023). Does ChatGPT resemble humans in language use?. <a href="https://arxiv.org/pdf/2303.08014">preprint</a><br><br>
+         </div>
+         <div class="publication - item">
+           Shuo Lu, <b>Xufeng Duan </b> & Xiangyu Li(2021). Prominence and Locality Principle in Chinese Possessive Topicalization Sentences and its Psychological Basis--Evidence from eye - movements. <i> Contemporary Linguistics</i> 23(1): 56 - 73 <a href = https://www.dropbox.com/scl/fi/4ga7a5ssslaed72hx3i2v/Prominence - and - Locality - Principle - in - Chinese - Possessive - Topicalization - Sentences.pdf?rlkey = 7rtvpqolr2xs6rtlychdtatwb&st = 672mpgkb&dl = 0>[pdf]</a><br><br>
+         </div>
+       </div>
+     </div> 
   
 
   
