--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       <h4>Xufeng Duan</h4>
 	    I am a PhD candidate in the <a href="https://cuhklpl.github.io/">language processing lab</a>, Linguistic department, The Chinese University of Hong Kong (top 50 university in QS ranking). I am looking for a postdoc position in 2024. 
 	    <br></br>
-	    My research focuses on large language models (LLMs) and language production. I used behavior/EEG/fMRI evidence and computational methods to study the mechanism of language system. I was also trained and licensed to use TMS for research in Hong Kong and had an intern as a language therapist/researcher for aphasia at the Third Affiliated Hospital of Sun Yat-sen University.
+	    My research focuses on large language models (LLMs) and language production. I utilize behavioral, EEG, and fMRI evidence along with computational methods to investigate the mechanisms of the language system. Additionally, I am trained and licensed in TMS for research purposes in Hong Kong and completed an internship as a language therapist/researcher specializing in aphasia at the Third Affiliated Hospital of Sun Yat-sen University.
 	    <br></br>
 	    <br></br>
 	    Mail: xufeng.duan@link.cuhk.edu.hk<br></br>
@@ -79,12 +79,12 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 <div class="w3-container w3-light-grey w3-padding-32 w3-padding-large" id="publications">
     <div class="w3-content" style="max-width:600px">
       <h4><b>Publications</b></h4>
-	    <b>Duan, X.</b>, Xiao, B., Tang, X., & Cai, Z. G. (in press). HLB: Benchmarking LLMs' Humanlikeness in Language Use. <i>arXiv:2409.15890 [cs.CL]</i>. <a href="https://doi.org/10.48550/arXiv.2409.15890">doi:10.48550/arXiv.2409.15890</a><br><br>
-	    <b>Duan, X.</b>, Zhou, X., Xiao, B., & Cai, Z. G. (in press). Unveiling Language Competence Neurons: A Psycholinguistic Approach to Model Interpretability. <i>arXiv:2409.15827 [cs.CL]</i>. <a href="https://doi.org/10.48550/arXiv.2409.15827">doi:10.48550/arXiv.2409.15827</a><br><br>
-	    <b>Duan, X.</b>, & Cai, Z. G. (in press). Chinese Character Processing. <i>Oxford Research Encyclopedia of Linguistics</i>. Oxford University Press. doi: https://doi.org/10.1093/acrefore/9780199384655.013.1012.<br><br>
-	    Wu, H., <b>Duan, X.</b>, & Cai, Z. G. (in press). Speaker demographics modulate listeners' neural correlates of spoken word processing. <i>Journal of Cognitive Neuroscience</i>.<br><br>
-	    <b>DUAN, X.</b>, Li, S., & Cai, Z. G. (2024). MacBehaviour: An R package for behavioural experimentation on large language models. <a href="https://arxiv.org/abs/2405.07495">preprint</a><br><br>
-	    Cai, Z. G., Haslett, D. A., <b>Duan, X.</b>, Wang, S., & Pickering, M. J. (2023). Does ChatGPT resemble humans in language use?. <a href="https://arxiv.org/abs/2303.08014">preprint</a><br><br>
+	    <b>Duan, X.</b>, Xiao, B., Tang, X., & Cai, Z. G. (2024). HLB: Benchmarking LLMs' Humanlikeness in Language Use. <i>arXiv:2409.15890 [cs.CL]</i>. <a href="https://doi.org/10.48550/arXiv.2409.15890">doi:10.48550/arXiv.2409.15890</a><br><br>
+	    <b>Duan, X.</b>, Zhou, X., Xiao, B., & Cai, Z. G. (2024). Unveiling Language Competence Neurons: A Psycholinguistic Approach to Model Interpretability. <i>arXiv:2409.15827 [cs.CL]</i>. <a href="https://doi.org/10.48550/arXiv.2409.15827">doi:10.48550/arXiv.2409.15827</a><br><br>
+	    <b>Duan, X.</b>, & Cai, Z. G. (2024). Chinese Character Processing. <i>Oxford Research Encyclopedia of Linguistics</i>. Oxford University Press. doi: https://doi.org/10.1093/acrefore/9780199384655.013.1012.<br><br>
+	    <b>DUAN, X.</b>, Li, S., & Cai, Z. G. (2024). MacBehaviour: An R package for behavioural experimentation on large language models. <i>Behavior Research Methods</i>. <a href="https://arxiv.org/abs/2405.07495">preprint</a><br><br>
+	    H. Wu, <b>Duan, X.</b>, Cai, Z. G.(2024). Speaker Demographics Modulate Listeners' Neural Correlates of Spoken Word Processing. <i>Journal of Cognitive Neuroscience</i> 2024; 36 (10): 2208–2226.<a href="https://doi.org/10.1162/jocn_a_02225"> doi: 10.1162/jocn_a_02225</a><br><br>
+	    Cai, Z., <b>Duan, X.</b>, Haslett, D., Wang, S., & Pickering, M. (2024). Do large language models resemble humans in language use?. In <i>Proceedings of the Workshop on Cognitive Modeling and Computational Linguistics</i> (pp. 37-56).<a href = "https://doi.org/10.18653/v1/2024.cmcl-1.4"> doi:10.18653/v1/2024.cmcl-1.4</a><br><br>
 	    Shuo Lu, <b>Xufeng Duan </b> & Xiangyu Li(2021). Prominence and Locality Principle in Chinese Possessive Topicalization Sentences and its Psychological Basis——Evidence from eye-movements. <i> Contemporary Linguistics</i> 23(1): 56-73</i> <a href=https://www.dropbox.com/scl/fi/4ga7a5ssslaed72hx3i2v/Prominence-and-Locality-Principle-in-Chinese-Possessive-Topicalization-Sentences.pdf?rlkey=7rtvpqolr2xs6rtlychdtatwb&st=672mpgkb&dl=0>[pdf]</a><br><br>
 	    
 <br>
@@ -99,6 +99,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       <h4><b>Conference Talks/Papers</b></h4>
 	    
 	    <b>Xufeng Duan</b> The Neural Basis of Decline in Written Production: Evidence from Chinese Handwriting (2024). <i>The annual meeting of Society for the Neurobiology of Language (SNL) </i>. Brisbane, Australia.<br><br>
+	    <b>Xufeng Duan</b> Humanlike language use in LLMs (2024). <i>CogSci Hong Kong Meetup</i> Hong Kong, China.
 	    <b>Xufeng Duan</b> Chinese translations of English words: A comparison between human and ChatGPT translations (2023). <i>Architectures and Mechanisms for Language Processing Asia (AMLaP Asia)</i>. Hong Kong, China.<br><br>
 	     Zhenguang Cai, <b>Xufeng Duan</b>, Lu Sun and Martin PickeringStructural priming in ChatGPT (2023). <i>Architectures and Mechanisms for Language Processing Asia (AMLaP Asia)</i>. Hong Kong, China.<br><br>
 	     Zhenguang Cai, <b>Xufeng Duan</b>, David Haslett, Shuqi Wang & Martin Pickering. Do language models resemble humans in language use (2023)? <i>Architectures and Mechanisms for Language Processing (AMLaP)</i>. Donostia-San Sebastián, Spain.<br><br>
