--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       <h4><b>Conference Talks/Papers</b></h4>
 	    
 	    <b>Xufeng Duan</b> The Neural Basis of Decline in Written Production: Evidence from Chinese Handwriting (2024). <i>The annual meeting of Society for the Neurobiology of Language (SNL) </i>. Brisbane, Australia.<br><br>
-	    <b>Xufeng Duan</b> Humanlike language use in LLMs (2024). <i>CogSci Hong Kong Meetup</i> Hong Kong, China.
+	    <b>Xufeng Duan</b> Humanlike language use in LLMs (2024). <i>CogSci Hong Kong Meetup</i> Hong Kong, China.<br><br>
 	    <b>Xufeng Duan</b> Chinese translations of English words: A comparison between human and ChatGPT translations (2023). <i>Architectures and Mechanisms for Language Processing Asia (AMLaP Asia)</i>. Hong Kong, China.<br><br>
 	     Zhenguang Cai, <b>Xufeng Duan</b>, Lu Sun and Martin PickeringStructural priming in ChatGPT (2023). <i>Architectures and Mechanisms for Language Processing Asia (AMLaP Asia)</i>. Hong Kong, China.<br><br>
 	     Zhenguang Cai, <b>Xufeng Duan</b>, David Haslett, Shuqi Wang & Martin Pickering. Do language models resemble humans in language use (2023)? <i>Architectures and Mechanisms for Language Processing (AMLaP)</i>. Donostia-San Sebastián, Spain.<br><br>
