--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <div class="w3-container w3-light-grey w3-padding-32 w3-padding-large" id="presentations">
     <div class="w3-content" style="max-width:600px">
       <h4><b>Conference Talks/Papers</b></h4>
-	    <b>Xufeng Duan</b> MacBehaviour: An R package for behavioural experimentation on large language models. (2024). <i>Architectures and Mechanisms for Language Processing Asia </i>. Singapore.<br><br>
+	    <b>Xufeng Duan</b> MacBehaviour: An R package for behavioural experimentation on large language models. (2024). <i>Architectures and Mechanisms for Language Processing Asia (AMLaP Asia)</i>. Singapore.<br><br>
 	    <b>Xufeng Duan</b> The Neural Basis of Decline in Written Production: Evidence from Chinese Handwriting (2024). <i>The annual meeting of Society for the Neurobiology of Language (SNL) </i>. Brisbane, Australia.<br><br>
 	    <b>Xufeng Duan</b> Humanlike language use in LLMs (2024). <i>CogSci Hong Kong Meetup</i> Hong Kong, China.<br><br>
 	    <b>Xufeng Duan</b> Chinese translations of English words: A comparison between human and ChatGPT translations (2023). <i>Architectures and Mechanisms for Language Processing Asia (AMLaP Asia)</i>. Hong Kong, China.<br><br>
