--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <!-- About section -->
   <div class="w3-container w3-blue-grey w3-center w3-blue-grey w3-padding-32" id="about">
     <h4><b>About Me</b></h4>
-    <img src="https://xufengduan.github.io/headshot.jpg" alt="Me" class="w3-image w3-padding-32" width="400" height="450">
+    <img src="https://xufengduan.github.io/headshot_new.jpg" alt="Me" class="w3-image w3-padding-32" width="400" height="450">
     <div class="w3-content w3-justify" style="max-width:600px">
 	    
       <h4>Xufeng Duan</h4>
