--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 
   
  <!-- CONFERENCE TALKS section -->
-  <div class="w3-container w3-2020-brilliant-white w3-padding-32 w3-padding-large" id="presentations">
+  <div class="w3-container w3-white w3-padding-32 w3-padding-large" id="presentations">
     <div class="w3-content" style="max-width:600px">
       <h4><b>Conference Talks/Papers</b></h4>
 	    <b>Xufeng Duan</b> MacBehaviour: An R package for behavioural experimentation on large language models. (2024). <i>Architectures and Mechanisms for Language Processing Asia (AMLaP Asia)</i>. Singapore.<br><br>
@@ -129,7 +129,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   </div>
 	
  <!-- Project section -->
-  <div class="w3-container w3-2020-brilliant-white w3-padding-32 w3-padding-large" id="projects">
+  <div class="w3-container w3-white w3-padding-32 w3-padding-large" id="projects">
     <div class="w3-content" style="max-width:600px">
       <h4><b>Research Projects</b></h4>
 	    <h5> Large language models for language research</h3>
@@ -152,7 +152,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   </div>    
 
 <!-- Funding section -->
-  <div class="w3-container w3-2020-brilliant-white w3-padding-32 w3-padding-large" id="funding">
+  <div class="w3-container w3-white w3-padding-32 w3-padding-large" id="funding">
     <div class="w3-content" style="max-width:600px">
       <h4><b>Research Funding</b></h4>
 	   Key Laboratory Open Fund for student(2019), <b>30,000 RMB</b> <i> Multimodal(EEG/fNIRs/Eyetrakcing) Corpus for Special Population</i>. Sun Yat-sen University.      
