--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <img src="https://xufengduan.github.io/headshot_new.jpg" alt="Me" class="w3-image w3-padding-32" width="400" height="450">
     <div class="w3-content w3-justify" style="max-width:600px">
 	    
-      <h4>Xufeng Duan</h4>
-	    I am a PhD candidate in the <a href="https://cuhklpl.github.io/">language processing lab</a>, Linguistic department, The Chinese University of Hong Kong (top 50 university in QS ranking). I am looking for a postdoc position in 2024. 
-	    <br></br>
-	    My research focuses on large language models (LLMs) and language production. I utilize behavioral, EEG, and fMRI evidence along with computational methods to investigate the mechanisms of the language system. Additionally, I am trained and licensed in TMS for research purposes in Hong Kong and completed an internship as a language therapist/researcher specializing in aphasia at the Third Affiliated Hospital of Sun Yat-sen University.
-	    <br></br>
+      <h4>Xufeng Duan</h4>  
+		I am a PhD candidate in the <a href="https://cuhklpl.github.io/">Language Processing Lab</a> at the Department of Linguistics, The Chinese University of Hong Kong (ranked among the top 50 in the QS rankings). I am seeking a postdoctoral position in 2024.  
+		<br></br>  
+		My research focuses on large language models (LLMs) and language production. I use behavioral, EEG, and fMRI data, along with computational methods, to explore the mechanisms of the language system. Additionally, I am trained and licensed in TMS for research purposes in Hong Kong and have completed an internship as a language therapist/researcher specializing in aphasia at the Third Affiliated Hospital of Sun Yat-sen University.  
+		<br></br>
 	    <br></br>
 	    Mail: xufeng.duan@link.cuhk.edu.hk<br></br>
 	    <a href="https://scholar.google.com/citations?user=W-MI5XUAAAAJ">Google scholar</a><br></br>
