--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 	<a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-hide-large">CLOSE</a>
 	<a href="#about" onclick="w3_close()" class="w3-bar-item w3-button">ABOUT ME</a>
 	<a href="#publications" onclick="w3_close()" class="w3-bar-item w3-button">PUBLICATIONS</a>
-	<a href="https://raw.githubusercontent.com/xufengduan/xufengduan.github.io/main/XufengDuan_CV.pdf" onclick="w3_close()" class="w3-bar-item w3-button">CV</a>
+	<a href="https://raw.githubusercontent.com/xufengduan/xufengduan.github.io/main/XufengDuan_CV.pdf" target="_blank" onclick="w3_close()" class="w3-bar-item w3-button">CV</a>
 	<a href="#presentations" onclick="w3_close()" class="w3-bar-item w3-button">CONFERENCE TALKS</a>
 	<a href="#posters" onclick="w3_close()" class="w3-bar-item w3-button">POSTER PRESENTATIONS</a>
 	<a href="#projects" onclick="w3_close()" class="w3-bar-item w3-button">RESEARCH PROJECTS</a>
