--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 		My research focuses on large language models (LLMs) and language production. I use behavioral, EEG, and fMRI data, along with computational methods, to explore the mechanisms of the language system. Additionally, I am trained and licensed in TMS for research purposes in Hong Kong and have completed an internship as a language therapist/researcher specializing in aphasia at the Third Affiliated Hospital of Sun Yat-sen University.  
 		<br></br>
 	    <br></br>
-	    Mail: xufeng.duan@link.cuhk.edu.hk<br></br>
+	    Email: xufeng.duan@link.cuhk.edu.hk<br></br>
 	    <a href="https://scholar.google.com/citations?user=W-MI5XUAAAAJ">Google scholar</a><br></br>
       <hr class="w3-opacity">
  
