--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   </div>
 <!-- ======= Selected Research section ======= -->
 <div class="w3-container w3-light-grey w3-padding-32 w3-padding-large" id="selected">
-  <div class="w3-content" style="max-width:1000px">
+  <div class="w3-content" style="max-width:600px">
     <h4><b>Selected Research</b></h4>
 
     <!--‑‑ ITEM BEGIN ‑‑>
@@ -91,7 +91,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       </div>
 
       <!-- 右侧文字 -->
-      <div class="w3-col l8 m7 s12">
+      <div class="w3-col s12 m8 w3-padding-small">
         <h5><b>MacBehaviour: An R package for behavioural experimentation on large language models</b></h5>
         <p>An open-source R toolkit to help researchers quickly set up psychology behavioral experiments interacting with LLMs, either locally or in the cloud.</p>
         <p><a href="https://doi.org/10.3758/s13428-024-02524-y"
