--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 	
 <!-- ======= Selected Research section ======= -->
 <div class="w3-container w3-light-grey w3-padding-32 w3-padding-large" id="selected">
-  <div class="w3-content" style="max-width:800px">
+  <div class="w3-content" style="max-width:600px">
     <h4><b>Selected Research</b></h4>
 
-    <div style="display: flex; align-items: center; gap: 20px; margin-top: 16px;">
+    <div style="display: flex; align-items: top; gap: 20px; margin-top: 16px;">
       <img src="figures/neurons.png" 
            alt="Neurons" 
            style="width:260px; height:auto; border-radius:8px; box-shadow: 0 2px 5px rgba(0,0,0,0.1);">
@@ -93,7 +93,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       </div>
     </div>
 	  
-    <div style="display: flex; align-items: center; gap: 20px; margin-top: 16px;">
+    <div style="display: flex; align-items: top; gap: 20px; margin-top: 16px;">
       <img src="figures/macbehaviour.png"
            alt="MacBehaviour" 
            style="width:260px; height:auto; border-radius:8px; box-shadow: 0 2px 5px rgba(0,0,0,0.1);">
