--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       <div>
         <h5 style="margin: 0 0 8px 0;"><b>Unveiling Language Competence Neurons: A Psycholinguistic Approach to Model Interpretability</b></h5>
         <p style="margin: 0 0 8px 0;">Identifing interpretable units in large language models aligned with psycholinguistic effect, bridging model neurons and human linguistic competence.</p>
-        <a href="https://doi.org/10.3758/s13428-024-02524-y" target="_blank">Link</a>
+        <a href="https://aclanthology.org/2025.coling-main.677/" target="_blank">Link</a>
       </div>
     </div>
 	  
