--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   </div>
 	
 <!-- ======= Selected Research section ======= -->
-<div class="w3-container w3-light-grey w3-padding-32 w3-padding-large" id="selected">
+<div class="w3-container w3-white w3-padding-32 w3-padding-large" id="selected">
   <div class="w3-content" style="max-width:800px">
     <h4><b>Selected Research</b></h4>
 
@@ -125,7 +125,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 	    H. Wu, <b>Duan, X.</b>, Cai, Z. G.(2024). Speaker Demographics Modulate Listeners' Neural Correlates of Spoken Word Processing. <i>Journal of Cognitive Neuroscience</i> 2024; 36 (10): 2208–2226.<a href="https://doi.org/10.1162/jocn_a_02225"> doi: 10.1162/jocn_a_02225</a><br></br>
 	    Cai, Z., <b>Duan, X.</b>, Haslett, D., Wang, S., & Pickering, M. (2024). Do large language models resemble humans in language use?. In <i>Proceedings of the Workshop on Cognitive Modeling and Computational Linguistics</i> (pp. 37-56).<a href = "https://doi.org/10.18653/v1/2024.cmcl-1.4"> doi:10.18653/v1/2024.cmcl-1.4</a><br></br>
 	    Qiu, Z., <b>Duan, X.</b>, & Cai, Z. (2023). Does ChatGPT Resemble Humans in Processing Implicatures?. In Proceedings of the 4th Natural Logic Meets Machine Learning Workshop (pp. 25-34)<a href="https://aclanthology.org/2023.naloma-1.3">https://aclanthology.org/2023.naloma-1.3</a><br></br>
-	    Shuo Lu, <b>Xufeng Duan </b> & Xiangyu Li(2021). Prominence and Locality Principle in Chinese Possessive Topicalization Sentences and its Psychological Basis——Evidence from eye-movements. <i> Contemporary Linguistics</i> 23(1): 56-73</i> <a href=https://www.dropbox.com/scl/fi/4ga7a5ssslaed72hx3i2v/Prominence-and-Locality-Principle-in-Chinese-Possessive-Topicalization-Sentences.pdf?rlkey=7rtvpqolr2xs6rtlychdtatwb&st=672mpgkb&dl=0>[pdf]</a><br></br>
+	    Lu, S., <b>Duan, X.</b> & Li X.(2021). Prominence and Locality Principle in Chinese Possessive Topicalization Sentences and its Psychological Basis——Evidence from eye-movements. <i> Contemporary Linguistics</i> 23(1): 56-73</i> <a href=https://www.dropbox.com/scl/fi/4ga7a5ssslaed72hx3i2v/Prominence-and-Locality-Principle-in-Chinese-Possessive-Topicalization-Sentences.pdf?rlkey=7rtvpqolr2xs6rtlychdtatwb&st=672mpgkb&dl=0>[pdf]</a><br></br>
 <br>
     </div>
   </div>    
