--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
         <a href="https://aclanthology.org/2025.coling-main.677/" target="_blank">Link</a>
       </div>
     </div>
-	  
+<hr class="w3-light-grey">
     <div style="display: flex; align-items: top; gap: 20px; margin-top: 16px;">
       <img src="figures/macbehaviour.png"
            alt="MacBehaviour" 
@@ -102,8 +102,6 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
         <a href="https://doi.org/10.3758/s13428-024-02524-y" target="_blank">Link</a>
       </div>
     </div>
-	  
-	  
   </div>
 </div>
 <!-- ===== End Selected Research section ===== -->
@@ -115,7 +113,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 	    Wang, S., <b>Duan, X.</b>, & Cai, Z. (2025). What to predict? Exploring how sentence structure influences contrast predictions in humans and large language models. <i>In T. Kuribayashi, G. Rambelli, E. Takmaz, P. Wicke, J. Li, & B.-D. Oh (Eds.), Proceedings of the Workshop on Cognitive Modeling and Computational Linguistics</i> (pp. 244–252). NAACL 2025. <a href="https://aclanthology.org/2025.cmcl-1.28/" target="_blank">2025.cmcl-1.28</a><br></br>
 	    Wu, H., <b>Duan, X.</b>, & Cai, Z. (2025). Distinct social-linguistic processing between humans and large audio-language models: Evidence from model-brain alignment. <i>In T. Kuribayashi, G. Rambelli, E. Takmaz, P. Wicke, J. Li, & B.-D. Oh (Eds.), Proceedings of the Workshop on Cognitive Modeling and Computational Linguistics</i> (pp. 135–143). NAACL 2025. <a href="https://aclanthology.org/2025.cmcl-1.18/" target="_blank">2025.cmcl-1.18</a><br></br>
 	    <b>Duan, X.</b>, Li, S., & Cai, Z. G. (2025). MacBehaviour: An R package for behavioural experimentation on large language models. <i>Behavior Research Methods</i>s, 57(1), 19. <a href=" https://doi.org/10.3758/s13428-024-02524-y">doi:10.3758/s13428-024-02524-y</a><br></br>
-	    <b>Duan, X.</b>, Zhou, X., Xiao, B., & Cai, Z. (2025). Unveiling language competence neurons: A psycholinguistic approach to model interpretability. In O. Rambow, L. Wanner, M. Apidianaki, H. Al-Khalifa, B. D. Eugenio, & S. Schockaert (Eds.), <em>Proceedings of the 31st International Conference on Computational Linguistics (pp. 10148–10157). Association for Computational Linguistics.</em><a href="https://aclanthology.org/2025.coling-main.677/">https://aclanthology.org/2025.coling-main.677/</a><br></br>
+	    <b>Duan, X.</b>, Zhou, X., Xiao, B., & Cai, Z. (2025). Unveiling language competence neurons: A psycholinguistic approach to model interpretability. In O. Rambow, L. Wanner, M. Apidianaki, H. Al-Khalifa, B. D. Eugenio, & S. Schockaert (Eds.), <em>Proceedings of the 31st International Conference on Computational Linguistics (pp. 10148–10157). Association for Computational Linguistics. </em><a href="https://aclanthology.org/2025.coling-main.677/">https://aclanthology.org/2025.coling-main.677/</a><br></br>
 	    Zhou, X., Chen, D., Cahyawijaya, S., <b>Duan, X.</b>, & Cai, Z. G. (2025). Linguistic Minimal Pairs Elicit Linguistic Similarity in Large Language Models. <em>Proceedings of the 31st International Conference on Computational Linguistics (pp. 6866–6888). Association for Computational Linguistics.</em> <a href="https://aclanthology.org/2025.coling-main.459//">https://aclanthology.org/2025.coling-main.459/</a><br></br>
             Tang, X., <b>Duan, X.</b>, & Cai, Z. G. (2024). Are LLMs Good Literature Review Writers? Evaluating the Literature Review Writing Ability of Large Language Models. arXiv preprint arXiv:2412.13612.<a href="https://doi.org/10.48550/arXiv.2412.13612 https://doi.org/10.48550/arXiv.2412.13612">doi:10.48550/arXiv:2412.13612</a><br></br>
 	    *Wang, S., <b>*Duan, X.</b>, & Cai, Z. (2024). A Multimodal Large Language Model “Foresees” Objects Based on Verb Information but Not Gender. In Proceedings of the 28th Conference on Computational Natural Language Learning (pp. 435-441). <a href="https://doi.org/10.18653/v1/2024.conll-1.32">doi:10.18653/v1/2024.conll-1.32</a><br></br>
@@ -126,7 +124,6 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 	    Cai, Z., <b>Duan, X.</b>, Haslett, D., Wang, S., & Pickering, M. (2024). Do large language models resemble humans in language use?. In <i>Proceedings of the Workshop on Cognitive Modeling and Computational Linguistics</i> (pp. 37-56).<a href = "https://doi.org/10.18653/v1/2024.cmcl-1.4"> doi:10.18653/v1/2024.cmcl-1.4</a><br></br>
 	    Qiu, Z., <b>Duan, X.</b>, & Cai, Z. (2023). Does ChatGPT Resemble Humans in Processing Implicatures?. In Proceedings of the 4th Natural Logic Meets Machine Learning Workshop (pp. 25-34)<a href="https://aclanthology.org/2023.naloma-1.3">https://aclanthology.org/2023.naloma-1.3</a><br></br>
 	    Lu, S., <b>Duan, X.</b> & Li X.(2021). Prominence and Locality Principle in Chinese Possessive Topicalization Sentences and its Psychological Basis——Evidence from eye-movements. <i> Contemporary Linguistics</i> 23(1): 56-73</i> <a href=https://www.dropbox.com/scl/fi/4ga7a5ssslaed72hx3i2v/Prominence-and-Locality-Principle-in-Chinese-Possessive-Topicalization-Sentences.pdf?rlkey=7rtvpqolr2xs6rtlychdtatwb&st=672mpgkb&dl=0>[pdf]</a><br></br>
-<br>
     </div>
   </div>    
   
@@ -204,7 +201,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   </div>
 </div>    
 
-  <div>Last updated 09/03/2023</div>
+  <div>Last updated 09/05/2023</div>
 
 <script>
 // Script to open and close sidebar
